# lang-rag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init_db.py  justfile  pyproject.toml  requirements.txt  start.sh
client/: client.py
scripts/: start.sh
src/: config.py  db.py  init_db.py  main.py  models.py  routes.py  services.py
src/core/: config.py  db.py
src/rag/: repositories.py  router.py  schemas.py
src/stammering/: router.py  schemas.py  services.py
